--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <title>Resources for Dog Adoption</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
-    <nav>
-        <ul>
-        <li>home</li>
-        <li>pros and cons</li>
-        <li>how to adopt</li>
-        <li>resources</li>
-        </ul>
-    </nav>
     <body>
-    <div id="page">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Pros and Cons</li>
+                <li>How to Adopt</li>
+                <li>Resources</li>
+            </ul>
+        </nav>
         <h1>Resources for Dog Adoption</h1>
         <p>
         Now that you've decided to bring a dog into your life, you'll need to decide where to find your new best friend. Animal shelters are great resources for finding wonderful animals that need loving homes. Here are a few in the Puget Sound area.
