Fixed broken tags

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Pros and Cons</li>
-                <li>How to Adopt</li>
-                <li>Resources</li>
-            </ul>
-        </nav>
+        <header>
+            <nav>   
+                <ul>
+                    <li>Home</li>
+                    <li>Pros and Cons</li>
+                    <li>How to Adopt</li>
+                    <li>Resources</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
         <h1>Resources for Dog Adoption</h1>
         <p>
         Now that you've decided to bring a dog into your life, you'll need to decide where to find your new best friend. Animal shelters are great resources for finding wonderful animals that need loving homes. Here are a few in the Puget Sound area.
@@ -21,9 +24,11 @@
     </body>
     <hr />
         <ul>
-        <li><a href="https://www.seattlehumane.org/adoption/dogs/">Seattle Humane</a></li>
-        <li><a href="https://www.paws.org/adopt/">PAWS Seattle</a></li>
-        <li><a href="https://www.emeraldcitypetrescue.org/">Emerald City Pet Rescue</a></li>
-        <li><a href="https://www.gingerspetrescue.org/">Ginger's Pet Rescue</a></li>
+            <li><a href="https://www.seattlehumane.org/adoption/dogs/">Seattle Humane</a></li>
+            <li><a href="https://www.paws.org/adopt/">PAWS Seattle</a></li>
+            <li><a href="https://www.emeraldcitypetrescue.org/">Emerald City Pet Rescue</a></li>
+            <li><a href="https://www.gingerspetrescue.org/">Ginger's Pet Rescue</a></li>
         </ul>
+    </main>
     <footer>Created by Code 102 Team: Andra, Mike, Klace, Matthew</footer>
+    </html>
