--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <script src="js/app.js"></script>
             <nav>   
                 <ul>
                     <li>Home</li>
