--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <header>
-            <script src="js/app.js"></script>
             <nav>   
                 <ul>
                     <li>Home</li>
@@ -18,6 +17,11 @@
         </header>
         <main>
         <h1>Resources for Dog Adoption</h1>
+        <P>How many dogs is too many?</P>
+        <h4><script src="js/app.js"></script></h4>
+        <p>Ready to get a dog right now?</p>
+        <h4><script src="js/app2.js"></script></h4>
+        <h4><script src="js/app3.js"></script></h4>
         <p>
         Now that you've decided to bring a dog into your life, you'll need to decide where to find your new best friend. Animal shelters are great resources for finding wonderful animals that need loving homes. Here are a few in the Puget Sound area.
         </p>
@@ -31,5 +35,6 @@
             <li><a href="https://www.gingerspetrescue.org/">Ginger's Pet Rescue</a></li>
         </ul>
     </main>
-    <footer>Created by Code 102 Team: Andra, Mike, Klace, Matthew</footer>
+    <footer>Created for Code 102 by Matthew, Andra, Klace, and Mike.
+    </footer>
     </html>
