--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
         </header>
         <main>
         <h1>Resources for Dog Adoption</h1>
-        <P>How many dogs is too many?</P>
+        <P>You might be asking yourself how many dogs are right for your home. How many dogs are too many? Let our experts help you.</P>
         <h4><script src="js/app.js"></script></h4>
-        <p>Ready to get a dog right now?</p>
-        <h4><script src="js/app2.js"></script></h4>
-        <h4><script src="js/app3.js"></script></h4>
         <p>
         Now that you've decided to bring a dog into your life, you'll need to decide where to find your new best friend. Animal shelters are great resources for finding wonderful animals that need loving homes. Here are a few in the Puget Sound area.
         </p>
